@@ -241,7 +241,11 @@
  *       the maintainer.
  */
 
-/* #undef	DEBUGMODE	   define DEBUGMODE to enable debugging mode.*/
+/* DEBUGMODE: This should only be used when tracing a problem. It creates
+ * an insane amount of log output which can be very useful for debugging.
+ * You should *NEVER* enable this setting on production servers.
+ */
+/* #undef	DEBUGMODE */
 
 /*
  * Full pathnames and defaults of irc system's support files. Please note that
