@@ -701,3 +701,5 @@ extern int register_user(aClient *cptr, aClient *sptr, char *nick, char *usernam
 extern int on_dccallow_list(aClient *to, aClient *from);
 extern int add_dccallow(aClient *sptr, aClient *optr);
 extern int del_dccallow(aClient *sptr, aClient *optr);
+extern void delete_linkblock(ConfigItem_link *link_ptr);
+extern void delete_classblock(ConfigItem_class *class_ptr);
